--- a/sass/components/_components.scss
+++ b/sass/components/_components.scss
@@ -2,6 +2,10 @@
 --------------------------------------------- */
 @import "navigation/navigation";
 
+/* Site Header
+--------------------------------------------- */
+@import "site/site-header";
+
 /* Posts and pages
 --------------------------------------------- */
 @import "content/posts-and-pages";
