--- a/sass/components/site/_site-header.scss
+++ b/sass/components/site/_site-header.scss
@@ -1,3 +1,19 @@
 .site-header {
+  position: sticky;
+  top: 0;
+  z-index: 100;
   background-color: $color__background-header;
+  &__inner {
+    position: relative;
+    margin: 0 auto;
+    max-width: $size__site-content;
+  }
+}
+
+.site-branding {
+  display: flex;
+  align-items: center;
+  padding-left: 8px;
+  height: $height__site-header;
+  z-index: 100;
 }
