--- a/sass/abstracts/variables/_structure.scss
+++ b/sass/abstracts/variables/_structure.scss
@@ -1,2 +1,12 @@
 $size__site-main: 100%;
 $size__site-sidebar: 25%;
+
+$size__site-max: 1200px;
+$size__site-content: 900px;
+
+$height__site-header: 48px;
+
+$breakpoint__sp : 480px;
+$breakpoint__tab : 780px;
+$breakpoint__note : 1040px;
+$breakpoint__pc : 1280px;
