--- a/sass/components/media/_media.scss
+++ b/sass/components/media/_media.scss
@@ -9,5 +9,8 @@
 
 /* Make sure logo link wraps around logo image. */
 .custom-logo-link {
-	display: inline-block;
+  display: inline-block;
+  img {
+    vertical-align: top;
+  }
 }
