--- a/sass/components/site/_site-header.scss
+++ b/sass/components/site/_site-header.scss
@@ -11,9 +11,11 @@
 }
 
 .site-branding {
+  position: relative;
   display: flex;
+  z-index: 500;
   align-items: center;
-  padding-left: 8px;
+  padding-left: 16px;
   height: $height__site-header;
   z-index: 100;
 }
