フロントページ前半流し込み

--- a/sass/base/elements/_body.scss
+++ b/sass/base/elements/_body.scss
@@ -1,3 +1,4 @@
 body {
+  font-size: 16px;
 	background: $color__background-body; // Fallback for when there is no custom background color defined.
 }
