--- a/sass/components/_components.scss
+++ b/sass/components/_components.scss
@@ -10,6 +10,10 @@
 --------------------------------------------- */
 @import "content/posts-and-pages";
 
+/* Front Page
+--------------------------------------------- */
+@import "content/front-page";
+
 /* Comments
 --------------------------------------------- */
 @import "comments/comments";
