--- a/style.css
+++ b/style.css
@@ -457,6 +457,7 @@ big {
 /* Elements
 --------------------------------------------- */
 body {
+	font-size: 16px;
 	background: #fff;
 }
 
@@ -795,6 +796,66 @@ textarea {
 .page-links {
 	clear: both;
 	margin: 0 0 1.5em;
+}
+
+/* Front Page
+--------------------------------------------- */
+.home .site-main {
+	width: 100%;
+}
+
+.front-top {
+	position: relative;
+	width: 100%;
+	height: 70vh;
+}
+
+.front-top .catch-copy {
+	position: absolute;
+	display: block;
+	z-index: 90;
+	top: 50%;
+	left: 0;
+	right: 0;
+	width: 450px;
+	height: 200px;
+	line-height: 200px;
+	margin: 0 auto;
+	text-align: center;
+	font-size: 32px;
+	transform: translateY(-50%);
+	background: radial-gradient(skyblue, transparent);
+}
+
+.front-top .front-image {
+	display: block;
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
+}
+
+.front-top .front-subimage--one {
+	position: absolute;
+	display: block;
+	z-index: 30;
+	top: 0;
+	left: 30px;
+}
+
+.front-top .front-subimage--two {
+	position: absolute;
+	display: block;
+	z-index: 30;
+	top: 0;
+	left: 30%;
+}
+
+.front-top .front-subimage--three {
+	position: absolute;
+	display: block;
+	z-index: 30;
+	top: 0;
+	right: 0;
 }
 
 /* Comments
