フロントページ構造流し込みだけ完了

--- a/sass/components/_components.scss
+++ b/sass/components/_components.scss
@@ -6,13 +6,17 @@
 --------------------------------------------- */
 @import "site/site-header";
 
+/* Site Footer
+--------------------------------------------- */
+@import "site/site-footer";
+
 /* Posts and pages
 --------------------------------------------- */
 @import "content/posts-and-pages";
 
 /* Front Page
 --------------------------------------------- */
-@import "content/front-page";
+@import "content/page-front";
 
 /* Comments
 --------------------------------------------- */
