--- a/sass/abstracts/variables/_colors.scss
+++ b/sass/abstracts/variables/_colors.scss
@@ -1,5 +1,6 @@
 $color__background-body: #fff;
 $color__background-header: #00B4C7;
+$color__background-footer: #00B4C7;
 $color__background-screen: #f1f1f1;
 $color__background-hr: #ccc;
 $color__background-button: #e6e6e6;
