--- a/style.css
+++ b/style.css
@@ -772,6 +772,19 @@ textarea {
 	z-index: 100;
 }
 
+/* Site Footer
+--------------------------------------------- */
+.site-footer {
+	background-color: #00B4C7;
+}
+
+.copyright {
+	margin: 0 auto;
+	padding: 1em 0;
+	text-align: center;
+	color: #fff;
+}
+
 /* Posts and pages
 --------------------------------------------- */
 .sticky {
@@ -780,7 +793,7 @@ textarea {
 
 .post,
 .page {
-	margin: 0 0 1.5em;
+	margin: 0;
 }
 
 .updated:not(.published) {
