--- a/sass/components/content/_page-front.scss
+++ b/sass/components/content/_page-front.scss
@@ -6,52 +6,23 @@
   position: relative;
   width: 100%;
   height: 70vh;
+  padding-bottom: 2rem;
 
-  .catch-copy {
+  .front-logo {
     position: absolute;
     display: block;
     z-index: 90;
     top: 50%;
     left: 0;
     right: 0;
-    width: 450px;
-    height: 200px;
+    width: auto;
+    height: 50%;
     line-height: 200px;
     margin: 0 auto;
-    text-align: center;
-    font-size: 32px;
     transform: translateY(-50%);
-    background: radial-gradient(skyblue, transparent);
   }
+}
 
-  .front-image {
-    display: block;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-  }
+.front-catch {
 
-  @mixin common-front-subimage {
-    position: absolute;
-    display: block;
-    z-index: 30;
-  }
-
-  .front-subimage {
-    &--one {
-      @include common-front-subimage;
-      top: 0;
-      left: 30px;
-    }
-    &--two {
-      @include common-front-subimage;
-      top: 0;
-      left: 30%;
-    }
-    &--three {
-      @include common-front-subimage;
-      top: 0;
-      right: 0;
-    }
-  }
 }
