--- a/sass/style.scss
+++ b/sass/style.scss
@@ -89,6 +89,10 @@ Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
 --------------------------------------------- */
 @import "plugins/jetpack/infinite-scroll";
 
+/* Meta Slider
+--------------------------------------------- */
+@import "plugins/metaslider/meta-slider";
+
 /*--------------------------------------------------------------
 # Utilities
 --------------------------------------------------------------*/
