--- a/sass/components/content/_page-front.scss
+++ b/sass/components/content/_page-front.scss
@@ -5,7 +5,7 @@
 .front-top {
   position: relative;
   width: 100%;
-  height: 70vh;
+  height: 60vh;
   padding-bottom: 2rem;
 
   .front-logo {
@@ -20,6 +20,12 @@
     line-height: 200px;
     margin: 0 auto;
     transform: translateY(-50%);
+  }
+}
+
+@include at-query($breakpoint__tab) {
+  .front-top {
+    height: 70vh;
   }
 }
 
