--- a/style.css
+++ b/style.css
@@ -390,7 +390,7 @@ textarea {
 	color: #404040;
 	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
 	font-size: 1rem;
-	line-height: 1.5;
+	line-height: 2;
 }
 
 h1,
@@ -404,6 +404,7 @@ h6 {
 
 h2 {
 	text-align: center;
+	font-size: 2rem;
 }
 
 p {
@@ -763,7 +764,7 @@ textarea {
 .site-header__inner {
 	position: relative;
 	margin: 0 auto;
-	max-width: 900px;
+	max-width: 1200px;
 }
 
 .site-branding {
@@ -830,7 +831,7 @@ textarea {
 .front-top {
 	position: relative;
 	width: 100%;
-	height: 70vh;
+	height: 60vh;
 	padding-bottom: 2rem;
 }
 
@@ -846,6 +847,12 @@ textarea {
 	line-height: 200px;
 	margin: 0 auto;
 	transform: translateY(-50%);
+}
+
+@media screen and (min-width: 780px) {
+	.front-top {
+		height: 70vh;
+	}
 }
 
 /* Comments
@@ -973,6 +980,45 @@ textarea {
 /* Re-display the Theme Footer when Infinite Scroll has reached its end. */
 .infinity-end.neverending .site-footer {
 	display: block;
+}
+
+/* Meta Slider
+--------------------------------------------- */
+.front-top .metaslider {
+	height: 100%;
+}
+
+.front-top .metaslider div {
+	height: 100%;
+}
+
+.front-top .metaslider .flexslider {
+	height: 100%;
+}
+
+.front-top .metaslider .flexslider .slides {
+	height: 100%;
+}
+
+.front-top .metaslider .flexslider .slides li {
+	height: 100%;
+}
+
+.front-top .metaslider .flexslider .slides img {
+	height: 100%;
+	object-fit: cover;
+}
+
+.front-top .metaslider .flexslider .flex-control-nav {
+	bottom: 8px;
+}
+
+.front-top .metaslider .flexslider .flex-control-paging li a {
+	background-color: rgba(0, 0, 0, 0.3);
+}
+
+.front-top .metaslider .flexslider .flex-control-paging li a.flex-active {
+	background-color: rgba(0, 0, 0, 0.6);
 }
 
 /*--------------------------------------------------------------
