--- a/sass/abstracts/variables/_colors.scss
+++ b/sass/abstracts/variables/_colors.scss
@@ -1,3 +1,5 @@
+$color__site-main: #00B4C7;
+
 $color__background-body: #fff;
 $color__background-header: #00B4C7;
 $color__background-footer: #00B4C7;
