--- a/sass/base/elements/_body.scss
+++ b/sass/base/elements/_body.scss
@@ -1,4 +1,8 @@
-body {
+:root {
   font-size: 16px;
+}
+
+body {
+  font-size: 1rem;
 	background: $color__background-body; // Fallback for when there is no custom background color defined.
 }
