--- a/sass/components/content/_page-front.scss
+++ b/sass/components/content/_page-front.scss
@@ -5,8 +5,8 @@
 .front-top {
   position: relative;
   width: 100%;
-  height: 60vh;
-  padding-bottom: 2rem;
+  height: calc(100vh - 128px);
+  overflow: hidden;
 
   .front-logo {
     position: absolute;
@@ -15,8 +15,8 @@
     top: 50%;
     left: 0;
     right: 0;
-    width: auto;
-    height: 50%;
+    width: 70%;
+    height: auto;
     line-height: 200px;
     margin: 0 auto;
     transform: translateY(-50%);
@@ -25,10 +25,58 @@
 
 @include at-query($breakpoint__tab) {
   .front-top {
-    height: 70vh;
+    height: calc(100vh - 48px);;
+
+    .front-logo {
+      width: auto;
+      height: 55%;
+    }
   }
 }
 
-.front-catch {
+.front-catch-section {
+  h2 {
+    &::after {
+      content: none;
+    }
+  }
+  p {
+    text-align: center;
+  }
+}
 
+@include at-query($breakpoint__tab) {
+  .front-catch-section {
+    p {
+      text-align: center;
+    }
+  }
+}
+
+.front-planprice-section {
+  .wp-block-column {
+    margin-top: 1rem;
+    padding: 1rem;
+    border-radius: 1rem;
+
+    &:nth-of-type(1),
+    &:nth-of-type(2) {
+      background-color: #def;
+    }
+    &:nth-of-type(3) {
+      background-color: #fed;
+    }
+  }
+  h3 {
+    text-align: center;
+    font-size: 2rem;
+  }
+  .front-catch-section-price {
+    text-align: center;
+    font-size: 2rem;
+  }
+  .front-catch-section-time {
+    text-align: center;
+    font-size: .9rem;
+  }
 }
