--- a/sass/components/site/_site-header.scss
+++ b/sass/components/site/_site-header.scss
@@ -6,7 +6,7 @@
   &__inner {
     position: relative;
     margin: 0 auto;
-    max-width: $size__content-max;
+    max-width: $size__site-max;
   }
 }
 
