細かなデザインの修正

--- a/sass/abstracts/mixins/_mixins.scss
+++ b/sass/abstracts/mixins/_mixins.scss
@@ -11,7 +11,7 @@
 }
 
 // Media Query
-@mixin at-query ($breakpoint) {
+@mixin at-query ($breakpoint: $breakpoint__tab) {
   @media screen and (min-width: $breakpoint) {
     @content;
   }
