--- a/sass/base/elements/_body.scss
+++ b/sass/base/elements/_body.scss
@@ -1,5 +1,11 @@
 :root {
-  font-size: 16px;
+  font-size: $font__main-size-sp;
+}
+
+@include at-query($breakpoint__tab){
+  :root {
+    font-size: $font__main-size-pc;
+  }
 }
 
 body {
