--- a/sass/abstracts/variables/_typography.scss
+++ b/sass/abstracts/variables/_typography.scss
@@ -5,3 +5,6 @@ $font__code: monaco, consolas, "Andale Mono", "DejaVu Sans Mono", monospace;
 $font__pre: "Courier 10 Pitch", courier, monospace;
 $font__line-height-body: 2;
 $font__line-height-pre: 1.6;
+
+$font__main-size-pc: 17px;
+$font__main-size-sp: 15px;
