--- a/sass/components/content/_page-front.scss
+++ b/sass/components/content/_page-front.scss
@@ -105,7 +105,7 @@
     margin: 0;
     text-align: center;
     font-size: 2.2rem;
-    line-height: 1.5;
+    line-height: $font__line-height-heading;
     span {
       font-size: .6em;
     }
