--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 /*!
 Theme Name: ShareAtelierBambi
 Theme URI: https://ichif.net/
@@ -388,7 +389,7 @@ select,
 optgroup,
 textarea {
 	color: #404040;
-	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+	font-family: "Helvetica Neue", "Hiragino Kaku Gothic ProN", "ヒラギノ角ゴ ProN W3", "游ゴシック体", "游ゴシック", "Yu Gothic", YuGothic, sans-serif;
 	font-size: 1rem;
 	line-height: 2;
 }
