サブカラーを追加

--- a/sass/abstracts/variables/_colors.scss
+++ b/sass/abstracts/variables/_colors.scss
@@ -1,4 +1,6 @@
 $color__site-main: #00B4C7;
+$color__site-sub-blue: #66cffe;
+$color__site-sub-orange: #fad163;
 
 $color__background-body: #fff;
 $color__background-header: #00B4C7;
