--- a/sass/base/typography/_headings.scss
+++ b/sass/base/typography/_headings.scss
@@ -10,7 +10,7 @@ h6 {
 
 h2 {
   position: relative;
-  margin: .8em auto .4em;
+  margin: 2em auto .4em;
   text-align: center;
   font-size: 2.5rem;
 
