--- a/style.css
+++ b/style.css
@@ -406,7 +406,7 @@ h6 {
 
 h2 {
 	position: relative;
-	margin: .8em auto .4em;
+	margin: 2em auto .4em;
 	text-align: center;
 	font-size: 2.5rem;
 }
@@ -899,11 +899,16 @@ textarea {
 .sub-title {
 	text-align: center;
 	font-size: 1.25rem;
-	margin-bottom: 1.2em;
+	margin-bottom: 2.5em;
 }
 
 .small-text {
 	font-size: .9rem;
+}
+
+.line-button {
+	margin-top: 1.5em;
+	margin-bottom: 1.2em;
 }
 
 .line-button.wp-block-button .wp-block-button__link {
@@ -962,7 +967,7 @@ textarea {
 }
 
 .front-catch-section {
-	margin: 2rem auto;
+	margin: 3rem auto;
 }
 
 .front-catch-section h2 {
@@ -974,6 +979,7 @@ textarea {
 }
 
 .front-catch-section p {
+	line-height: 1.85;
 	text-align: center;
 }
 
@@ -984,7 +990,8 @@ textarea {
 }
 
 .front-goodpoint-columns {
-	margin-bottom: 1rem;
+	margin: 0 auto 1rem;
+	max-width: 960px;
 }
 
 .front-goodpoint-columns .wp-block-image {
@@ -1006,7 +1013,7 @@ textarea {
 
 .front-planprice-columns .wp-block-column {
 	margin-top: 1rem;
-	padding: 1rem;
+	padding: 1rem 1.5rem 1.3rem;
 	border-radius: 1rem;
 }
 
@@ -1015,11 +1022,11 @@ textarea {
 }
 
 .front-planprice-columns .wp-block-column:nth-of-type(1), .front-planprice-columns .wp-block-column:nth-of-type(2) {
-	background-color: #def;
+	border: 3px solid #66cffe;
 }
 
 .front-planprice-columns .wp-block-column:nth-of-type(3) {
-	background-color: #fed;
+	border: 3px solid #fad163;
 }
 
 .front-planprice-columns h3 {
@@ -1087,6 +1094,7 @@ textarea {
 .front-schedule-blue {
 	position: relative;
 	padding-left: 2em;
+	margin-top: 3em;
 }
 
 .front-schedule-blue::before {
@@ -1098,7 +1106,7 @@ textarea {
 	width: 1.4em;
 	height: 1.4em;
 	border-radius: .2em;
-	background-color: #def;
+	background-color: #66cffe;
 }
 
 .front-schedule-orange {
@@ -1115,7 +1123,7 @@ textarea {
 	width: 1.4em;
 	height: 1.4em;
 	border-radius: .2em;
-	background-color: #eed;
+	background-color: #fad163;
 }
 
 .front-sponser-container {
@@ -1130,13 +1138,21 @@ textarea {
 }
 
 .front-sponser-container .wp-block-group__inner-container .wp-block-image {
-	margin: 0 .5rem 1.5rem;
+	margin: 0 .5rem 3rem;
+	flex-basis: 100%;
+	text-align: center;
 }
 
 @media screen and (min-width: 480px) {
 	.front-sponser-container .wp-block-group__inner-container .wp-block-image {
 		margin: 0 2rem 1.5rem;
+		flex-basis: auto;
 	}
+}
+
+.front-access-columns {
+	max-width: 960px;
+	margin: 0 auto 1.5rem;
 }
 
 /* Comments
