--- a/style.css
+++ b/style.css
@@ -857,13 +857,23 @@ textarea {
 /* Site Footer
 --------------------------------------------- */
 .site-footer {
-	height: 48px;
+	padding: 1rem 0;
 	background-color: #00B4C7;
+}
+
+.site-footer .twitter-logo {
+	display: block;
+	margin: 0 auto;
+	width: 32px;
+	height: 32px;
+	background-color: #fff;
+	border-radius: 24px;
 }
 
 .copyright {
 	margin: 0 auto;
-	line-height: 48px;
+	padding-top: 1rem;
+	line-height: 1.5;
 	text-align: center;
 	color: #fff;
 }
